# lazy_alchemy

./: .gitignore  .scrutinizer.yml  CLAUDE.md  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  dev_requirements.txt  enhancement_plan.md  lazy_alchemy.py  lgtm.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
docs/superpowers/plans/: 2026-05-18-lazy-alchemy-v2-implementation.md
lazy_alchemy/: __init__.py  __init__.pyi  lazy_alchemy.py
specifications/: architecture.md  build_and_test.md
tests/: conftest.py  seed_db.py  test_async.py  test_lazy_orm.py  test_pydantic.py  test_sqlmodel.py  test_sync.py
