[tool:pytest]
addopts = --verbose
python_files = tests/*.py
asyncio_mode = auto

[metadata]
description_file = README.md

[options]
include_package_data = True
python_requires = >=3.10

[options.extras_require]
dev =
    pytest>=7
    pytest-asyncio
    aiosqlite
    mypy
    ruff
    coverage

[options.packages.find]
exclude = test